# my_website

./: .gitignore  README.md  pyproject.toml  requirements.txt
src1/data/: SavedCharts.csv  UserData.csv  dataset_prepared.csv
src1/instance/: tfl_rest_flask.sqlite
src1/tfl_restapi_flask/: __init__.py  models.py  routes.py
src2/tfl_frontend_flask/: __init__.py  routes.py
src2/tfl_frontend_flask/static/css/: bootstrap.css
src2/tfl_frontend_flask/templates/: base.html  baseLoggedin.html  create_chart.html  error.html  home.html  loggedIn.html  login.html  signup.html  viewSelection.html
tests/: conftest.py  test_tflfrontend_selenium.py
